--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,27 @@ input {
 img {
 	max-width: 300px;
 }
+
+.column {
+	content: "";
+	float: left;
+	padding: 1%;
+	width: 48%;
+}
+
+.row {
+	content: "";
+	display: table;
+	clear: both;
+}
+
+.button {
+	border: 2px solid black;
+	border-radius: 10px;
+	background-color: #e6e600;
+	width: 500px;
+	height: 100px;
+	font-size: 30px;
+	cursor: pointer;
+	margin-bottom: 10px;
+}
